--- a/HW1knit.Rmd
+++ b/HW1knit.Rmd
@@ -26,7 +26,6 @@ install.packages("ggfortify")
 install.packages("sf")
 install.packages("tmap")
 install.packages("tidyverse") 
-install.packages("lubridate")
 install.packages("hrbrthemes")
 install.packages("viridis")
 ```
@@ -44,7 +43,6 @@ library(ggfortify)
 library(sf)
 library(tmap)
 library(ggplot2)
-library(lubridate)
 library(hrbrthemes)
 library(viridis)
 ```
@@ -92,23 +90,22 @@ snow_tidy <- snowfiltered %>%
 
 ### Descriptive introductory summary of what the project is all about (3-4 sentences)  
 ```{r}
+#Snowshore hares, otherwise known as Lepus americanus, are a keystone prey species that play an ecologically important role in northern boreal forests and experience population fluctuations of 8-11 years. This capture-recapture study of snowshoe hares was conducted at 5 locales in the Tanana valley from study sites Tok in the east to Clear in the west from 1999-2012 with a time duration of 13 years. Snowshoe hare population densities were the highest in 1999 and declined thereafter. This study did not find any declines in apparent survival during declining densities in these study populations. 
 
+![Snowshoe Hare (Lepus Americanus) Source: Northwest Wildlife Preservation Society . “Snowshoe Hare.” Northwest Wildlife Preservation Society, 2020, www.northwestwildlife.com/learn/species-reports/snowshoe-hare/.](\images\snowshoe.png)
 ```
-
-### Map of the study area with images of snowshoe hares
-```{r}
 
 ```
 
 ### Finalized graph about the Bonanza Creek snowshoe hare population  
-```{r}
+```{r, message = FALSE, warning = FALSE, fig.align="left"}
 #Creating a histogram based on the weight of the snowshore hares with a frequency count of the data split between by sex (male/female)
 snow_plot <- ggplot(snow_tidy, aes(x=weight, color=sex, fill=sex)) +
   geom_histogram(position="identity", alpha=0.5, brewerPalette="Paired",alpha=0.5) + 
-  labs(title="Weight Distribution of Female and Male Snowshoe Hares from 1999 - 2012",x="Weight (g)", y = "Frequency Count of Snowshoe Hares")+
+  labs(title="Weight Distribution of Female and Male Snowshoe Hares from 1999 - 2012",x="Weight (g)", y = "Frequency Count of Snowshoe Hares", caption = "Weight distribution of male and female snowshoe hares (Lepus americanus) \n in Bonanza Creek Experimental Forest (1999-2012) \n (Source: https://portal.lternet.edu/nis/metadataviewer?packageid=knb-lter-bnz.55.22)") + 
   theme_bw()
 
-snow_plot
+snow_plot+theme(plot.caption=element_text(hjust=0.5))
 
 ```
 
