--- a/HW1knit.Rmd
+++ b/HW1knit.Rmd
@@ -28,6 +28,8 @@ install.packages("tmap")
 install.packages("tidyverse") 
 install.packages("hrbrthemes")
 install.packages("viridis")
+install.packages("magrittr")
+install.packages("qwraps2")
 ```
 
 ### Attaching all of the relevant packages for this assignment with the library 
@@ -44,7 +46,8 @@ library(sf)
 library(tmap)
 library(ggplot2)
 library(hrbrthemes)
-library(viridis)
+library(qwraps2)
+library(magrittr)
 ```
 
 ### Reading in the data to form a new dataframe 
@@ -68,7 +71,7 @@ tail(snowshoe) #Gives a preview of the data set
 
 #Statement: I want to see how the weight of all the snowshoe hares both female and male will vary across the years of the study 
 ```
-
+ 
 #Filtering and constructing a new dataframe with desired variables 
 ```{r}
 snowfiltered = subset(snowshoe, select = -c(time, grid, trap, l_ear, r_ear, hindft, notes, b_key, session_id, study)) #Filtered out all the columns that are not desired in the new dataframe 
@@ -88,12 +91,14 @@ snow_tidy <- snowfiltered %>%
   filter(sex!= "NA")
 ```
 
-### Descriptive introductory summary of what the project is all about (3-4 sentences)  
+### Descriptive introductory summary of what the project is all about (3-4 sentences)
 ```{r}
-#Snowshore hares, otherwise known as Lepus americanus, are a keystone prey species that play an ecologically important role in northern boreal forests and experience population fluctuations of 8-11 years. This capture-recapture study of snowshoe hares was conducted at 5 locales in the Tanana valley from study sites Tok in the east to Clear in the west from 1999-2012 with a time duration of 13 years. Snowshoe hare population densities were the highest in 1999 and declined thereafter. This study did not find any declines in apparent survival during declining densities in these study populations. 
-
-![Snowshoe Hare (Lepus Americanus) Source: Northwest Wildlife Preservation Society . “Snowshoe Hare.” Northwest Wildlife Preservation Society, 2020, www.northwestwildlife.com/learn/species-reports/snowshoe-hare/.](\images\snowshoe.png)
+#Snowshore hares, otherwise known as Lepus americanus, are a keystone prey species that play an ecologically important role in northern boreal forests and experience population fluctuations of 8-11 years. This capture-recapture study of snowshoe hares was conducted at 5 locales in the Tanana valley from study sites Tok in the east to Clear in the west from 1999-2012 with a time duration of 13 years. Snowshoe hare population densities were the highest in 1999 and declined thereafter. This study did not find any declines in apparent survival during declining densities in these study populations 
 ```
+
+### Image of the Snowshoe Hare (Lepus americanus) 
+```{r echo=FALSE, out.width='100%', fig.align = "center", echo = FALSE}
+knitr::include_graphics("images/snowshoe.png")
 
 ```
 
@@ -107,5 +112,77 @@ snow_plot <- ggplot(snow_tidy, aes(x=weight, color=sex, fill=sex)) +
 
 snow_plot+theme(plot.caption=element_text(hjust=0.5))
 
+```
+
+#Creating a New Data Frame with Desirable Traits  
+```{r}
+
+#Creating a new data frame to include variables that cannot be analyzed in the numeric class 
+snowtable = subset(snowshoe, select = -c(time, grid, trap, l_ear, session_id, study, notes, b_key, age, r_ear, hindft)) 
+
+#Renaming columns in the dataframe to be capitalized 
+names(snowtable)[names(snowtable) == "sex"] <- "Sex"
+names(snowtable)[names(snowtable) == "date"] <- "Year of Study"
+names(snowtable)[names(snowtable) == "weight"] <- "Weight of Hare (g)"
+
+
+#Filtering out the NA values for the new data frame to only get male and female 
+snow_analysis <- snowtable %>%  
+  filter(Sex %in% c ("f", "m", "M", "F")) %>%  
+  mutate(
+    Sex = case_when(
+      Sex == "f" ~ "F", 
+      Sex == "m" ~ "M")) %>%  
+  filter(Sex!= "NA")
+
+#Filtering out female snowshow hares to only get the males for data analysis results  
+snow_male <- snow_analysis %>%  
+ filter(Sex!= "F")
+
+snow_male
+
+#Filtering out male snowshow hares to only get the females for data analysis results 
+snow_female <- snow_analysis %>%  
+ filter(Sex!= "M")
+
+snow_female
+```
+
+#Creating the Finalized HTML Data Table 
+```{r}
+
+#Calculating Descriptive Statistics of the Weight of Female Snowshoe Hares 
+mean(snow_female$`Weight of Hare (g)`, na.rm = TRUE)
+#1289.994
+median(snow_female$`Weight of Hare (g)`, na.rm = TRUE)
+#1350 
+sd(snow_female$`Weight of Hare (g)`, na.rm = TRUE)
+#325.08004 
+min(snow_female$`Weight of Hare (g)`, na.rm = TRUE)
+#240 
+max(snow_female$`Weight of Hare (g)`, na.rm = TRUE)
+#2170 
+range(snow_female$`Weight of Hare (g)`, na.rm = TRUE)
+#1930 
+
+snow_tbl <- data.frame(
+  Statistics = c("Mean", "Median", "Standard Deviation", "Minimum", "Maximum", "Range"),
+  Calculations = c(
+    "1,290 ",
+    "1,350", 
+    "325 ", 
+    "240", 
+    "2,170", 
+    "1,930"
+  )
+)
+
+kable(snow_tbl, caption = '<b>Female Snowshoe Hare Weight Descriptive Statistics</b>') %>%
+  kable_styling(full_width = F) %>% 
+  column_spec(1, bold = T, border_right = T) %>%
+  column_spec(2, width = "30em", background = "white") %>%  
+  footnote(general = "Descriptive statistics which calculate the mean to range of weights for all female snowshoe hare populations in Bonanza Creek Experimental Forest (1999-2012)")    
+  
+  
 ```
 
